[gd_scene format=3 uid="uid://yj8k4dxtl6on"]

[ext_resource type="PackedScene" uid="uid://dapi17w4oqsgl" path="res://assets/models/mascaras.fbx" id="1_gmjp2"]
[ext_resource type="Script" uid="uid://g6ko2qn080gq" path="res://scripts/selectMask_Scene.gd" id="3_72k5u"]
[ext_resource type="Script" uid="uid://bhrjbe7fwso4o" path="res://scripts/mask_selectable.gd" id="3_t3dyg"]
[ext_resource type="Texture2D" uid="uid://csb8vqqxc2jc3" path="res://assets/images/jugar.png" id="4_448pe"]
[ext_resource type="Texture2D" uid="uid://dufk5am03ba17" path="res://assets/images/p1.png" id="4_bfohn"]
[ext_resource type="Texture2D" uid="uid://bc4cc1hcv5es2" path="res://assets/images/p2.png" id="5_awjr2"]
[ext_resource type="Texture2D" uid="uid://g6yhep6oc61u" path="res://assets/images/marcoArriba.png" id="6_448pe"]
[ext_resource type="Texture2D" uid="uid://csck8cqejkvc4" path="res://assets/images/marcoBajo.png" id="7_obepn"]
[ext_resource type="Texture2D" uid="uid://dsxa18b2j2k77" path="res://assets/images/cortinas.png" id="8_obepn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t3dyg"]
size = Vector3(2.915039, 3.5263062, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_lrb8b"]

[node name="SelectMaskScene" type="Node3D" unique_id=152709202]
script = ExtResource("3_72k5u")

[node name="Camera3D" type="Camera3D" parent="." unique_id=1135907038]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0126776695, 0, 1.510627)
projection = 1
size = 6.909

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1790639142]

[node name="cara1" parent="." unique_id=1552861223 instance=ExtResource("1_gmjp2")]
transform = Transform3D(0.84493756, 0, 0, 0, 0.8837036, 0, 0, 0, 1, -1.8457849, 0.57366467, -2.4709845)
script = ExtResource("3_t3dyg")
mask_id = &"Hermenegildo"

[node name="Armature" parent="cara1" index="0" unique_id=351499130]
transform = Transform3D(100, 0, 0, 0, -1.1920929e-05, 99.99999, 0, -99.99999, -1.1920929e-05, -1.4288809, 0, 0)

[node name="Skeleton3D" parent="cara1/Armature" index="0" unique_id=1933396897]
bones/1/rotation = Quaternion(0.3096804, -0.3197692, -0.65235215, 0.61341864)
bones/1/scale = Vector3(0.99999994, 0.9999999, 0.9999999)
bones/3/rotation = Quaternion(0.15685815, 0.042271618, -0.23383817, 0.9586075)
bones/3/scale = Vector3(1, 0.99999994, 1)
bones/5/rotation = Quaternion(-0.19527882, 0.42897096, 0.79631376, -0.37912342)
bones/5/scale = Vector3(0.9999997, 0.99999994, 0.99999994)
bones/7/rotation = Quaternion(0.3096804, -0.3197692, -0.65235215, 0.61341864)
bones/7/scale = Vector3(0.99999994, 0.9999999, 0.9999999)
bones/9/rotation = Quaternion(0.15685815, -0.042271618, 0.23383817, 0.9586075)
bones/11/rotation = Quaternion(0.19527882, 0.42897096, 0.79631376, 0.37912342)
bones/11/scale = Vector3(0.9999997, 0.99999994, 0.99999994)
bones/13/position = Vector3(0, -0.01324957, 0)
bones/13/rotation = Quaternion(0.5129954, -0.48665777, -0.5129953, 0.48665774)
bones/13/scale = Vector3(0.99999994, 1.0000001, 1.0000001)
bones/15/rotation = Quaternion(0.49226826, -0.50761396, -0.49226823, 0.507614)

[node name="mascaraPrueba" parent="cara1/Armature/Skeleton3D" index="0" unique_id=163653717]
visible = false

[node name="ojoDch" type="BoneAttachment3D" parent="cara1/Armature/Skeleton3D" index="1" unique_id=824032332]
transform = Transform3D(-0.05563128, 0.60227734, -0.79634607, 0.011736659, -0.79713154, -0.60369134, -0.9983823, -0.042930577, 0.03727676, 0, 0, 0)
bone_name = "eye_l"
bone_idx = 1
override_pose = true
use_external_skeleton = true
external_skeleton = NodePath("..")

[node name="ojoIzq" type="BoneAttachment3D" parent="cara1/Armature/Skeleton3D" index="2" unique_id=1249344299]
transform = Transform3D(-0.05563128, 0.60227734, -0.79634607, 0.011736659, -0.79713154, -0.60369134, -0.9983823, -0.042930577, 0.03727676, 0, 0, 0)
bone_name = "eye_r"
bone_idx = 7
override_pose = true
use_external_skeleton = true
external_skeleton = NodePath("..")

[node name="HitBox" type="StaticBody3D" parent="cara1" unique_id=1086168223]

[node name="CollisionShape3D" type="CollisionShape3D" parent="cara1/HitBox" unique_id=746456655]
transform = Transform3D(0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0, 1, -1.4184594, -0.35018906, 0.9859185)
shape = SubResource("BoxShape3D_t3dyg")

[node name="Pj" type="Sprite3D" parent="cara1" unique_id=187739134]
transform = Transform3D(1.05, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 1.7844951, -0.4224765, 0)
texture = ExtResource("4_bfohn")

[node name="cara2" parent="." unique_id=954683335 instance=ExtResource("1_gmjp2")]
transform = Transform3D(0.8354266, 0, 0, 0, 0.9085699, 0, 0, 0, 1, 4.269534, 0.60951877, -2.4709845)
script = ExtResource("3_t3dyg")
mask_id = &"Susi"

[node name="Armature" parent="cara2" index="0" unique_id=351499130]
transform = Transform3D(100, 0, 0, 0, -1.1920929e-05, 99.99999, 0, -99.99999, -1.1920929e-05, -1.4288809, 0, 0)

[node name="Skeleton3D" parent="cara2/Armature" index="0" unique_id=1933396897]
bones/1/rotation = Quaternion(0.3096803, -0.3197692, -0.65235215, 0.61341864)
bones/1/scale = Vector3(1, 1.0000001, 0.99999994)
bones/3/rotation = Quaternion(0.15685815, 0.042271618, -0.23383817, 0.9586075)
bones/3/scale = Vector3(1, 0.99999994, 1)
bones/5/rotation = Quaternion(-0.19527882, 0.42897096, 0.79631376, -0.37912342)
bones/5/scale = Vector3(0.9999997, 0.99999994, 0.99999994)
bones/7/rotation = Quaternion(0.3096803, -0.3197692, -0.65235215, 0.61341864)
bones/7/scale = Vector3(1, 1.0000001, 0.99999994)
bones/9/rotation = Quaternion(0.15685815, -0.042271618, 0.23383817, 0.9586075)
bones/11/rotation = Quaternion(0.19527882, 0.42897096, 0.79631376, 0.37912342)
bones/11/scale = Vector3(0.9999997, 0.99999994, 0.99999994)
bones/13/position = Vector3(0, -0.01324957, 0)
bones/13/rotation = Quaternion(0.5129954, -0.48665777, -0.5129953, 0.48665774)
bones/13/scale = Vector3(0.99999994, 1.0000001, 1.0000001)
bones/15/rotation = Quaternion(0.49226826, -0.50761396, -0.49226823, 0.507614)

[node name="mascaraPrueba" parent="cara2/Armature/Skeleton3D" index="0" unique_id=163653717]
visible = false

[node name="ojoDch" type="BoneAttachment3D" parent="cara2/Armature/Skeleton3D" index="1" unique_id=218842739]
transform = Transform3D(-0.0556314, 0.60227746, -0.79634607, 0.011736659, -0.79713166, -0.6036914, -0.99838233, -0.0429307, 0.03727676, 0, 0, 0)
bone_name = "eye_l"
bone_idx = 1
override_pose = true
use_external_skeleton = true
external_skeleton = NodePath("..")

[node name="ojoIzq" type="BoneAttachment3D" parent="cara2/Armature/Skeleton3D" index="2" unique_id=59073675]
transform = Transform3D(-0.0556314, 0.60227746, -0.79634607, 0.011736659, -0.79713166, -0.6036914, -0.99838233, -0.0429307, 0.03727676, 0, 0, 0)
bone_name = "eye_r"
bone_idx = 7
override_pose = true
use_external_skeleton = true
external_skeleton = NodePath("..")

[node name="HitBox" type="StaticBody3D" parent="cara2" unique_id=1799277520]

[node name="CollisionShape3D" type="CollisionShape3D" parent="cara2/HitBox" unique_id=1994395547]
transform = Transform3D(0.9999998, 0, 0, 0, 0.9999997, 0, 0, 0, 1, -1.4184594, -0.35018912, 0.9859195)
shape = SubResource("BoxShape3D_t3dyg")

[node name="Pj" type="Sprite3D" parent="cara2" unique_id=266108540]
transform = Transform3D(1.05, 0, 0, 0, 1.0500003, 0, 0, 0, 1.05, -4.500351, -0.42247653, 0)
texture = ExtResource("5_awjr2")

[node name="UI" type="CanvasLayer" parent="." unique_id=343692524]

[node name="Control" type="Control" parent="UI" unique_id=912099632]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control" unique_id=433093098]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelP1" type="Label" parent="UI/Control/HBoxContainer" unique_id=1900755771]
layout_mode = 2

[node name="LabelP2" type="Label" parent="UI/Control/HBoxContainer" unique_id=1624335164]
layout_mode = 2

[node name="BotonJugar" type="Sprite3D" parent="." unique_id=1494169577]
transform = Transform3D(0.2312066, 0, 0, 0, 0.2312066, 0, 0, 0, 1, 0, 2.109699, 0.36281872)
texture = ExtResource("4_448pe")

[node name="StaticBody3D" type="StaticBody3D" parent="BotonJugar" unique_id=473000083 groups=["play_button_3d"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BotonJugar/StaticBody3D" unique_id=1193048204]
shape = SubResource("BoxShape3D_lrb8b")

[node name="MarcoArriba" type="Sprite3D" parent="." unique_id=958351713]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4814842, 0)
texture = ExtResource("6_448pe")

[node name="MarcoAbajo" type="Sprite3D" parent="." unique_id=482276795]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.0781937, -2.8799682)
texture = ExtResource("7_obepn")

[node name="Cortinas" type="Sprite3D" parent="." unique_id=435377147]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.8703704)
texture = ExtResource("8_obepn")

[editable path="cara1"]
[editable path="cara2"]
